--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
-SECRET_KEY=django-insecure-o+xgo49&2*4zzkptk^!k8&3dstr*(1++dx(2dl7icohr5agnn8
+SECRET_KEY=ROX0HnSuMEnfK5nwWm8uwkw9XBul9HhT5wITUYWB9Mfu_90JYaBCvW4J5MQVWam8Z2Y
 DEBUG=True
 ALLOWED_HOSTS=127.0.0.1,localhost
 
