--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -3,12 +3,12 @@ name: CI/CD Pipeline
 on:
   push:
     branches:
-      - master  # master 브랜치에 푸시될 때마다 실행
-      - skdudgns  # skdudgns 브랜치에 푸시될 때마다 실행
+      - master
+      - skdudgns
   pull_request:
     branches:
-      - master  # master 브랜치로 풀 리퀘스트가 열릴 때마다 실행
-      - skdudgns  # skdudgns 브랜치로 풀 리퀘스트가 열릴 때마다 실행
+      - master
+      - skdudgns
 
 jobs:
   build:
@@ -41,7 +41,8 @@ jobs:
           sudo apt-get upgrade -y
           sudo apt-get install -y mysql-server
           sudo service mysql start
-          mysql -u ${{ env.DB_USER }} -p${{ env.DB_PASSWORD }} -e 'CREATE DATABASE IF NOT EXISTS ${{ env.DB_NAME }};'
+          sudo mysql -e "ALTER USER 'root'@'localhost' IDENTIFIED WITH 'mysql_native_password' BY '${{ env.DB_PASSWORD }}';"
+          sudo mysql -u ${{ env.DB_USER }} -p${{ env.DB_PASSWORD }} -e "CREATE DATABASE IF NOT EXISTS ${{ env.DB_NAME }};"
 
       - name: Run migrations
         run: |
