--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -41,15 +41,20 @@ jobs:
           sudo apt-get upgrade -y
           sudo apt-get install -y mysql-server
           sudo service mysql start
-          sudo mysql -e "ALTER USER 'root'@'localhost' IDENTIFIED BY '${{ env.DB_PASSWORD }}'; FLUSH PRIVILEGES;"
+          sleep 10
+          sudo mysql -e "ALTER USER 'root'@'localhost' IDENTIFIED WITH 'mysql_native_password' BY '${{ env.DB_PASSWORD }}'; FLUSH PRIVILEGES;"
           sudo mysql -u root -p${{ env.DB_PASSWORD }} -e "CREATE DATABASE IF NOT EXISTS ${{ env.DB_NAME }};"
 
       - name: Run migrations
+        env:
+          DATABASE_URL: mysql://${{ env.DB_USER }}:${{ env.DB_PASSWORD }}@${{ env.DB_HOST }}/${{ env.DB_NAME }}
         run: |
           source venv/bin/activate
           python manage.py migrate
 
       - name: Run tests
+        env:
+          DATABASE_URL: mysql://${{ env.DB_USER }}:${{ env.DB_PASSWORD }}@${{ env.DB_HOST }}/${{ env.DB_NAME }}
         run: |
           source venv/bin/activate
           python manage.py test
