--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -16,7 +16,7 @@ jobs:
 
     env:
       DB_NAME: teamproject
-      DB_USER: root
+      DB_USER: skdudgns
       DB_PASSWORD: 1234
       DB_HOST: 127.0.0.1
 
@@ -35,15 +35,18 @@ jobs:
           source venv/bin/activate
           pip install -r requirements.txt
 
-      - name: Set up MySQL
+      - name: Install MySQL server
         run: |
           sudo apt-get update
           sudo apt-get upgrade -y
           sudo apt-get install -y mysql-server
+
+      - name: Configure MySQL
+        run: |
           sudo service mysql start
           sleep 10
-          sudo mysql -e "ALTER USER 'root'@'localhost' IDENTIFIED BY '${{ env.DB_PASSWORD }}'; FLUSH PRIVILEGES;"
           sudo mysql -u root -p${{ env.DB_PASSWORD }} -e "CREATE DATABASE IF NOT EXISTS ${{ env.DB_NAME }};"
+          sudo mysql -u root -p${{ env.DB_PASSWORD }} -e "GRANT ALL PRIVILEGES ON ${{ env.DB_NAME }}.* TO '${{ env.DB_USER }}'@'%' IDENTIFIED BY '${{ env.DB_PASSWORD }}'; FLUSH PRIVILEGES;"
 
       - name: Run migrations
         env:
