--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -18,6 +18,7 @@ jobs:
       DB_NAME: teamproject
       DB_USER: skdudgns
       DB_PASSWORD: 1234
+      DB_ROOT_PASSWORD: 1234
       DB_HOST: 127.0.0.1
 
     steps:
@@ -45,8 +46,10 @@ jobs:
         run: |
           sudo service mysql start
           sleep 10
-          sudo mysql -u root -p${{ env.DB_PASSWORD }} -e "CREATE DATABASE IF NOT EXISTS ${{ env.DB_NAME }};"
-          sudo mysql -u root -p${{ env.DB_PASSWORD }} -e "GRANT ALL PRIVILEGES ON ${{ env.DB_NAME }}.* TO '${{ env.DB_USER }}'@'%' IDENTIFIED BY '${{ env.DB_PASSWORD }}'; FLUSH PRIVILEGES;"
+          sudo mysql -e "ALTER USER 'root'@'localhost' IDENTIFIED BY '${{ env.DB_ROOT_PASSWORD }}'; FLUSH PRIVILEGES;"
+          sudo mysql -u root -p${{ env.DB_ROOT_PASSWORD }} -e "CREATE DATABASE IF NOT EXISTS ${{ env.DB_NAME }};"
+          sudo mysql -u root -p${{ env.DB_ROOT_PASSWORD }} -e "CREATE USER IF NOT EXISTS '${{ env.DB_USER }}'@'%' IDENTIFIED BY '${{ env.DB_PASSWORD }}';"
+          sudo mysql -u root -p${{ env.DB_ROOT_PASSWORD }} -e "GRANT ALL PRIVILEGES ON ${{ env.DB_NAME }}.* TO '${{ env.DB_USER }}'@'%'; FLUSH PRIVILEGES;"
 
       - name: Run migrations
         env:
