--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -46,7 +46,7 @@ jobs:
         run: |
           sudo service mysql start
           sleep 10
-          sudo mysql -e "ALTER USER 'root'@'localhost' IDENTIFIED BY '${{ env.DB_ROOT_PASSWORD }}'; FLUSH PRIVILEGES;"
+          sudo mysql -u root -e "ALTER USER 'root'@'localhost' IDENTIFIED BY '${{ env.DB_ROOT_PASSWORD }}'; FLUSH PRIVILEGES;"
           sudo mysql -u root -p${{ env.DB_ROOT_PASSWORD }} -e "CREATE DATABASE IF NOT EXISTS ${{ env.DB_NAME }};"
           sudo mysql -u root -p${{ env.DB_ROOT_PASSWORD }} -e "CREATE USER IF NOT EXISTS '${{ env.DB_USER }}'@'%' IDENTIFIED BY '${{ env.DB_PASSWORD }}';"
           sudo mysql -u root -p${{ env.DB_ROOT_PASSWORD }} -e "GRANT ALL PRIVILEGES ON ${{ env.DB_NAME }}.* TO '${{ env.DB_USER }}'@'%'; FLUSH PRIVILEGES;"
