--- a/.github/workflows/django.yml
+++ b/.github/workflows/django.yml
@@ -17,6 +17,10 @@ jobs:
 
     steps:
     - uses: actions/checkout@v4
+    - name: Set up Node.js
+      uses: actions/setup-node@v2
+      with:
+        node-version: '20'
     - name: Set up Python ${{ matrix.python-version }}
       uses: actions/setup-python@v3
       with:
